Replace to ensure that the cards are correctly aligned

--- a/client-frontend/src/styles/styles.css
+++ b/client-frontend/src/styles/styles.css
@@ -15,11 +15,74 @@
     --color-shadow: #7a7a7a;
 }
 
-
+/* cards */
 .centered-title {
-    text-align: center;
-    font-size: 25px;
-    margin: 2%;
+  text-align: center;
+  font-size: 28px; 
+  margin: 20px 0; 
+  color: var(--color-symbols); 
+  font-family: 'Arial', sans-serif; 
+  font-weight: 400; 
+  text-shadow: 1px 1px 2px var(--color-shadow); 
+  letter-spacing: 1px; 
+}
+
+  
+  .product-list-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .card-container {
+    width: 240px; 
+    height: auto;
+    margin: 10px;
+    border: 1px solid var(--color-contorno);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    background-color: var(--color-componentes);
+  }
+  
+  .card-image {
     width: 100%;
+    height: 150px; 
+    object-fit: cover; 
+  }
+  
+  .card-title {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin: 8px 0;
+    color: var(--color-text);
+  }
+  
+  .card-category {
+    font-weight: bold;
+    color: var(--color-prices);
+    align-self: start; /* Alinea a la izquierda */
+    margin-left: 4px;
+    padding: 1px 4px;
+    border: 1px solid var(--color-contornoButtons);
+    border-radius: 8px;
+  }
+  
+  .card-material {
+    font-weight: bold;
+    color: var(--color-prices);
+    align-self: start; /* Alinea a la izquierda */
+    margin-left: 4px;
+  }
+  
+  .card-description {
+    color: var(--color-text);
+    margin-top: 4px;
+    text-align: center;
   }
   
